Set all content boxes to correct placement

--- a/nyt-article.html
+++ b/nyt-article.html
@@ -11,20 +11,17 @@
         <!-- <a href="none"><img href="none" src="icons/three-line-icon.png"></a>  -->
         <a><img href="none" src="">search logo</a>
         topbar elements
+        <span>
+            <button>subscribe~~</button>
+            <button>Log in</button></span>
     </section>
 
-    <section class="user-links">
-        <!-- needs better name -->
-        <a>subscribe~~</a>
-        <a>Log in</a>
-    </section>
-
-    <section class="article-title">
-        Space Ripples Reveal Big Bang’s Smoking Gun
+    <section class="article-title-box">
+        <span class="article-title">Space Ripples Reveal Big Bang’s Smoking Gun</span>
     </section>
 
     <section class="main-image-container">
-        <a class="main-image"><img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&auto=webp&disable=upscale" 
+        <a class="main-image"><img class="main-image" src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&auto=webp&disable=upscale" 
             srcset="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=90&auto=webp 600w, https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-jumbo.jpg?quality=90&auto=webp 1024w, 
             https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&auto=webp 2048w"></a>
         <figcaption class="mn-img-subtitle-box">
@@ -45,7 +42,17 @@
 
 
     <div class="grid">
+        <!-- not sure about the grid thing as a class -->
         <section class="article-body">
+            <div>
+                <p>CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.</p>
+                <p>He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.                </p>
+                <p>If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.                </p>
+                <p>“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.                </p>
+            </div>
+            <div>
+                <p></p>
+            </div>
                 article body, links on some things, pictures sprinkled
                 giant weird grid pic
         </section>
