finalized title and nav-bar

--- a/nyt-article.html
+++ b/nyt-article.html
@@ -30,8 +30,6 @@
             </svg></a>
         </div>
 
-
-<!--there's a line in betwen -->
         <div class="header-buttons">
             <a href="https://www.nytimes.com/subscription?campaignId=797YR&redirect_uri=https%3A%2F%2Fwww.nytimes.com%2F2014%2F03%2F18%2Fscience%2Fspace%2Fdetection-of-waves-in-space-buttresses-landmark-theory-of-big-bang.html%3F_r%3D0">
                 <button>Subscribe now</button>
@@ -43,7 +41,9 @@
     </section>
 
     <section class="article-title-box">
-        <span class="article-title">Space Ripples Reveal Big Bang’s Smoking Gun</span>
+        <!-- <h1> -->
+            <span class="article-title">Space Ripples Reveal <br> Big Bang’s Smoking Gun</span>
+    <!-- </h1> -->
     </section>
 
     <section class="main-image-container">
