--- a/nyt-article.html
+++ b/nyt-article.html
@@ -127,6 +127,9 @@
                 <p>The ripples manifested themselves as faint spiral patterns in a bath of microwave radiation that permeates space and preserves a picture of the universe when it was 380,000 years old and as hot as the surface of the sun.                </p>
                 <p>Dr. Kovac and his collaborators, working in an experiment known as Bicep, for Background Imaging of Cosmic Extragalactic Polarization, reported their results in a scientific briefing at the Center for Astrophysics here on Monday and in a set of papers submitted to The Astrophysical Journal.                </p>
             </div>
+            <!-- <br>
+            <br> -->
+            <!-- <br>
             <br>
             <br>
             <br>
@@ -164,12 +167,8 @@
             <br>
             <br>
             <br>
-
             <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <br> -->
 
             <div class="diagram">
                 <header>
@@ -191,6 +190,10 @@
                         <li><p><span class="p-bold">EXPANSION</span> Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot.</p></li>
                 </ul>
             </div>
+            <footer class="dia-footer">
+                <hr>
+                <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
+            </footer>
             </div>
             <div>
                 <p>Dr. Kovac said the chance that the results were a fluke was only one in 10 million.                </p>
@@ -203,7 +206,10 @@
                 to tell him the news.</p>
             </div>
             <div>
-                <video></video>
+                <!-- <video tabindex="-1" controlslist="nodownload" style="width: 600px; height: 320px; left: 0px; top: -320px;"> -->
+                <iframe controls width="600" height="320" src="https://www.youtube.com/watch?v=ZlfIVEy_YOA&feature=emb_title"></iframe>
+                    <source src="">
+                </video>
             </div>
             <div>
                 <p>Confused, Dr. Linde called out to his wife, asking if she had ordered anything.                </p>
