--- a/nyt-article.html
+++ b/nyt-article.html
@@ -191,7 +191,7 @@
                 </ul>
             </div>
             <footer class="dia-footer">
-                <hr>
+                <hr class="footer-hr">
                 <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
             </footer>
             </div>
@@ -205,12 +205,20 @@
                     <a href="https://www.youtube.com/watch?v=ZlfIVEy_YOA">knocked on his door with a bottle of Champagne</a>
                 to tell him the news.</p>
             </div>
-            <div>
-                <!-- <video tabindex="-1" controlslist="nodownload" style="width: 600px; height: 320px; left: 0px; top: -320px;"> -->
-                <iframe controls width="600" height="320" src="https://www.youtube.com/watch?v=ZlfIVEy_YOA&feature=emb_title"></iframe>
-                    <source src="">
-                </video>
-            </div>
+
+            <figure class="vid-box">
+                <div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <!-- <video tabindex="-1" controlslist="nodownload" style="width: 600px; height: 320px; left: 0px; top: -320px;"> -->
+                    <!-- <iframe controls width="600" height="320" src="https://www.youtube.com/watch?v=ZlfIVEy_YOA&feature=emb_title"></iframe>
+                        <source src="">
+                    </video> -->
+                </div>
+                <figcaption>
+                    <span>Stanford Professor Andrei Linde celebrates physics breakthrough</span>
+                    <span>Video by Stanford University</span>
+                </figcaption>
+            </figure>
             <div>
                 <p>Confused, Dr. Linde called out to his wife, asking if she had ordered anything.                </p>
                 <p>“And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.                </p>
@@ -232,7 +240,7 @@
                 <p>“The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.                </p>
             </div>
             <div>
-                <figure>
+                <figure class="bicep-2">
                     <div>
                         <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-articleLarge.jpg?quality=75&auto=webp&disable=upscale">
                     </div>
